--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -103,7 +103,7 @@
       <div class="mySlides fade">
         <div class="numbertext">1 / 4</div>
         <div class="img1">
-        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\mains.png" style="width:108.5vw;height: 81vh;z-index: 1;display: flex;">
+        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\mains1.png" style="width:108.5vw;height: 81vh;z-index: 1;display: flex;">
         <div class="hpos2">
         <h1>Reason For People Choose Us</h1></div>
         <div class="text">We collaborate and build on knowledge and expertise to<br> improve ourselves and the world we lives in. We collaborate<br> and build on knowledge and expertise to improve ourselves<br> and the world we lives in. We collaborate and build on<br> knowledge and expertise to improve ourselves and the world<br> we lives in. We collaborate and build on knowledge and<br> expertise to improve ourselves and the world we lives in.
@@ -123,7 +123,7 @@
     </div>
 
         <div class="meimge1">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture20.png" width="860px" height="650px">
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture20.png" width="860px" height="650px">
         </div>
         <!-- <div class="rd">
           <p>Read More<i class='fas fa-book-open'></i>
@@ -137,7 +137,7 @@
           <div class="numbertext">2 / 4</div>
           
           <div class="img2">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\mains.png" style="width:108.5vw;height: 81vh;z-index: 1;display: flex;">
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\mains1.png" style="width:108.5vw;height: 81vh;z-index: 1;display: flex;">
           <div class="globelogo">
             <i class='fa fa-globe'></i></div>
           <div class="text1">Expertise in Manufacturing Engineering, Industrial<br> Automation & Simulation from past 10+ years in Industry.
@@ -156,7 +156,7 @@
       </div>
 
           <div class="meimge2">
-            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture20.png" width="860vw" height="650vh">
+            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture20.png" width="860vw" height="650vh">
           </div>
           <!-- <div class="rd">
             <p>Read More<i class='fas fa-book-open'></i>
@@ -168,7 +168,7 @@
         <div class="mySlides fade2">
           <div class="numbertext">3 / 4</div>
           <div class="img3">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\mains.png" style="width:108.5vw;height: 81vh">
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\mains1.png" style="width:108.5vw;height: 81vh">
           <div class="img5">
           <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Eg-Website\Picture23.png" style="width:11.5vw;height:15vh"></div>
           <div class="text2">Our vertical solutions equip with the tools need for Industry<br> to streamline processes, boost productivity, and thrive in a<br> digital landscape that unlock real value, making our business<br> more innovative and efficient than ever before.
@@ -187,7 +187,7 @@
       </div>
 
           <div class="meimge3">
-            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture20.png" width="860vw" height="650vh">
+            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture20.png" width="860vw" height="650vh">
           </div>
           <!-- <div class="rd">
             <p>Read More<i class='fas fa-book-open'></i>
@@ -199,7 +199,7 @@
         <div class="mySlides fade3">
           <div class="numbertext">4/ 4</div>
           <div class="img4">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\mains.png" style="width:108.5vw;height: 81vh">
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\mains1.png" style="width:108.5vw;height: 81vh">
           <div class="img6">
             <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture24.png" style="width:11vw;height:18vh"></div>
           <div class="text3">Best practices in the industry, Adherence towards customer<br> commitments & truthfulness.
@@ -217,7 +217,7 @@
       </div>
 
           <div class="meimge4">
-            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture20.png" width="860vw" height="650vh">
+            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture20.png" width="860vw" height="650vh">
           </div>
           <!-- <div class="rd">
             <p>Read More<i class='fas fa-book-open'></i>
