--- a/digitalfacilitysolutions.html
+++ b/digitalfacilitysolutions.html
@@ -52,7 +52,7 @@
   
         <ul>
           <div class="what">
-            <li><a style="color:blue;" href="#"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
+            <li><a href="#"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
             <li><a  href="WhoWeAre.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Who We Are</p><i class=""></i></a>
@@ -62,7 +62,7 @@
           </div>
         <br><br><br><br>
          <div class="ser">
-          <li><a  href="services1.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Services</p><i class=""></i></a>
+          <li><a style="color:blue;"  href="services1.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Services</p><i class=""></i></a>
           </div>
           </li>
           <div class="Insights">
@@ -78,28 +78,28 @@
     <div class="container1">
         <pre><div class="hpost1"><h1>DIGITAL FACILITY SOLUTIONS</h1></div></pre>
         <pre><div class="parapos3">
-        <p>2D layout has traditionally been the easiest method for factory design. But restricting<br> oneself to 2D carries a lot of risks.
-For example, collisions due to insufficient headroom are often only discovered<br> during construction. The costs of modifying a design at this stage of a project are at their<br> highest, and the associated delays affect the duration of the entire project.<br> Misunderstandings can easily arise leading to costly design and construction errors.<br>Furthermore, when working in 2D, all views of a design have to be manually drafted, and<br> then individually updated with each design change.<br>With a 3D approach, a single 3D design model is created, from which all the required<br> drawings are automatically generated. This represents a considerable time saving over the<br> life of a typical project, and also avoids the risk of introducing human error while manually<br> drafting individual views</p>
+        <p>2D layout has traditionally been the easiest method for factory design. But restricting<br>oneself to 2D carries a lot of risks.
+For example, collisions due to insufficient headroom are often only discovered<br>during construction. The costs of modifying a design at this stage of a project are at their<br>highest, and the associated delays affect the duration of the entire project.<br>Misunderstandings can easily arise leading to costly design and construction errors.<br>Furthermore, when working in 2D, all views of a design have to be manually drafted, and<br>then individually updated with each design change.<br>With a 3D approach, a single 3D design model is created, from which all the required<br>drawings are automatically generated. This represents a considerable time saving over the<br>life of a typical project, and also avoids the risk of introducing human error while manually<br>drafting individual views</p>
 </div></pre> 
 <div class="image2">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="500px" height="300px"></div>
+    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="470px" height="300px" style="border-width:2px;border-style:solid;border-color:red"></div>
     <div class="image3">
-        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="500px" height="300px"></div>   
+        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="470px" height="300px" style="border-width:2px;border-style:solid;border-color:violet"></div>   
 </div>
 <div class="container2">
   <pre><div class="parapos4">
-  <p>Digital Factory refers to the integration of digital technologies and<br> data-driven systems into the manufacturing and production<br> processes. It involves the use of advanced technologies such as<br> Internet of Things (IoT), Artificial Intelligence (AI), robotics,<br> simulation, and data analytics to optimize and improve various<br> aspects of the factory operations. The goal of the digital factory is to<br> enhance efficiency, productivity, flexibility, and quality while reducing<br> costs and lead times.
+  <p>Digital Factory refers to the integration of digital technologies and<br>data-driven systems into the manufacturing and production<br>processes. It involves the use of advanced technologies such as<br>Internet of Things (IoT), Artificial Intelligence (AI), robotics,<br>simulation, and data analytics to optimize and improve various<br>aspects of the factory operations. The goal of the digital factory is to<br>enhance efficiency, productivity, flexibility, and quality while reducing<br>costs and lead times.
   </p></div></pre>
   <pre><div class="parapos5">
-    <p>Scanning for digitalization, in the context of the manufacturing<br> industry, typically refers to the process of capturing and digitizing<br> physical objects, components, or environments using 3D scanning<br> technologies. These scanners use various methods such as laser,<br> structured light, or photogrammetry to capture precise<br> measurements and create digital representations of physical objects<br> or spaces. The scanned data is then used for various purposes in the<br> digitalization process, including design & engineering, reverse<br> engineering, quality control & inspection, virtual simulation &<br> analysis & digital twin creation.
+    <p>Scanning for digitalization, in the context of the manufacturing<br>industry, typically refers to the process of capturing and digitizing<br>physical objects, components, or environments using 3D scanning<br>technologies. These scanners use various methods such as laser,<br>structured light, or photogrammetry to capture precise<br>measurements and create digital representations of physical objects<br>or spaces. The scanned data is then used for various purposes in the<br>digitalization process, including design & engineering, reverse<br>engineering, quality control & inspection, virtual simulation &<br>analysis & digital twin creation.
     </p>
   </div></pre>
   <div class="image4">
-  <img src="Picture61.PNG" width="750px" height="600px"></div>
+  <img src="Picture61.PNG" width="750px" height="600px" style="border-width:2px;border-style:solid;border-color:salmon"></div>
 </div>
 <div class="container3">
  <pre><div class="parapos6">
-<p>Scanning for digitalization plays a crucial role in the overall digital transformation of manufacturing<br> processes by capturing accurate physical data and converting it into digital formats.
+<p>Scanning for digitalization plays a crucial role in the overall digital transformation of manufacturing<br>processes by capturing accurate physical data and converting it into digital formats.
 </p></div></pre>
 <div class="pic70">
 <img src="Picture70.png" width="1500px" height="350px"></div>
@@ -113,8 +113,8 @@ For example, collisions due to insufficient headroom are often only discovered<b
   <h1>Data Rich BIM Model</h1>
 </div></pre>
 <pre><div class="parapos7">
-  <p>This digital data can then be leveraged for advanced analysis, simulation, and optimization, leading to improved<br> productivity, quality, and agility in the manufacturing industry.<br>
- Digital facility solutions use data analytics techniques to analyse collected data and extract actionable insights from it.<br> Machine learning models and advanced analytics algorithms can identify patterns, detect anomalies, and predict<br> maintenance needs. Equipment uptime can be optimized, unplanned downtime can be reduced, and mechanical<br> systems can be extended for a longer period of time with predictive maintenance
+  <p>This digital data can then be leveraged for advanced analysis, simulation, and optimization, leading to improved<br>productivity, quality, and agility in the manufacturing industry.<br>
+Digital facility solutions use data analytics techniques to analyse collected data and extract actionable insights from it.<br>Machine learning models and advanced analytics algorithms can identify patterns, detect anomalies, and predict<br>maintenance needs. Equipment uptime can be optimized, unplanned downtime can be reduced, and mechanical<br>systems can be extended for a longer period of time with predictive maintenance
     </p>
 </div></pre>
 </div>
