--- a/engineeringdesignsolutions.html
+++ b/engineeringdesignsolutions.html
@@ -52,7 +52,7 @@
   
         <ul>
           <div class="what">
-            <li><a style="color:blue;" href="#"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
+            <li><a href="#"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
             <li><a  href="WhoWeAre.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Who We Are</p><i class=""></i></a>
@@ -62,7 +62,7 @@
           </div>
         <br><br><br><br>
          <div class="ser">
-          <li><a  href="services1.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Services</p><i class=""></i></a>
+          <li><a style="color:blue;" href="services1.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Services</p><i class=""></i></a>
           </div>
           </li>
           <div class="Insights">
@@ -83,12 +83,12 @@
 <pre><div class="ppos1">
 <p>As part of engineering design services, a range of activities are involved in developing and<br>designing mechanical systems, components, and products that are innovative and efficient. Envision<br>specializes in BIW (Body-in-White) fixture design, providing high-quality solutions for the automotive<br>industry.</p></div></pre>
 <div class="image2">
-<img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="400px" height="280px"></div>
+<img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="400px" height="280px" style="border-width:2px;border-style:solid;border-color:aquamarine"></div>
 <pre><div class="ppos2">
 <p>Our expertise in fixture design ensures precise and efficient assembly processes for vehicle body structures.<br>An engineer's engineering design services begin with conceptualization and ideation, during which he or<br>she works closely with clients to understand their needs, goals, and constraints. Considering factors such as<br>functionality, performance, aesthetics, safety, and cost, they brainstorm and generate design ideas. 
 </p> </div></pre> 
 <div class="image3">
-  <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="400px" height="280px"></div>
+  <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="400px" height="280px" style="border-width:2px;border-style:solid;border-color:deeppink"></div>
 <pre><div class="ppos3">
 <p>Utilizing cutting-edge software tools, we create accurate 3D models of BIW fixtures. These models allow us<br>to simulate and validate the assembly process, ensuring that the fixtures meet the desired<br>specifications and are capable of handling the anticipated loads and forces. Engineering design services<br>often involve simulation and analysis to assess the performance and behavior of the design under various<br>conditions. Stress, heat transfer, fluid dynamics, and structural integrity are simulated and analyzed using<br>specialized software. This helps identify potential issues, optimize the design, and ensure it meets the<br>desired specifications and standards.
 </p></div></pre>
@@ -96,11 +96,12 @@
 <div class="container2">
   <div class="hpost3">
   <h1>IMPLEMENTATION</h1></div>
-  <pre><div class="parapost2">
-  <p>We provide comprehensive documentation, including detailed drawings, bill of materials (BOM), and assembly<br>instructions, to facilitate smooth integration of the fixtures into the manufacturing process. Envision is committed to<br>delivering exceptional BIW fixture design solutions that optimize production processes, improve product quality, and<br>enhance overall operational efficiency. <br>
-Engineering design services aim to optimize a design for performance, cost, manufacturability, and other factors. Based<br>on feedback, testing results, and client requests, engineers iterately refine the design. In this way, the most effective and<br>efficient design solution is achieved.</p>
+  <div class="parapost2">
+  <p>We provide comprehensive documentation, including detailed drawings, bill of materials (BOM), and assembly instructions, to facilitate<br> smooth integration of the fixtures into the manufacturing process. Envision is committed to delivering exceptional BIW fixture design<br> solutions that optimize production processes, improve product quality, and enhance overall operational efficiency. </p></div>
+<div class="parapost3">
+  <p>Engineering design services aim to optimize a design for performance, cost, manufacturability, and other factors. Based on feedback,<br> testing results, and client requests, engineers iterately refine the design. In this way, the most effective and efficient design solution is<br>achieved.</p>
 
-</div></pre>
+</div>
 
 <div class="image11">
   <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture58.PNG" width="1895px"></div>
