--- a/road.html
+++ b/road.html
@@ -186,11 +186,102 @@
 
 
 </div>
+<div class="container9">
+  <div class="Circle1">
+      <div id="circle"></div></div>
+      <div class="letE"><p>E</p></div>
+
+      <div class="Circle2">
+          <div id="circle"></div></div>
+          <div class="letG"><p>G</p></div>
+
+          <div class="para-1">
+  <p>Envision Integrated Services function<br> as a full stakeholder to business,<br> offering a consulting-led approach<br> with an integrated portfolio of<br> technology that encompass the entire<br> Enterprise value chain. Our Customer-<br>centric Engagement Model defines<br> how we do engage with you, offering<br> specialized services and solutions that<br> meet the distinct needs of your<br> business.
+  </p></div>
+  <div class="hpost6">
+  <h1>Main Links</h1></div>
+  <div class="hpost7">
+  <h1>Services</h1></div>
+  <div class="hpost8">
+      <h1>Contact Us</h1></div>
+
+<pre><div class="links">
+<p><div><a href="home.html" style="text-decoration:none;color:black">Home</a></div>
+<div><a href="What We Do.html" style="text-decoration:none;color:black">What We Do</a></div>
+<div><a href="WhoWeAre.html" style="text-decoration:none;color:black">Who We Are</a></div>
+<div><a href="services1.html" style="text-decoration:none;color:black">Services</a></div>
+<div><a href="insights.html" style="text-decoration:none;color:black">Insights</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Get In Touch</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Careers</a></div>
+<div><a href="#" style="text-decoration:none;color:black">News & Events</a></div>
+</p></div></pre>
+<pre><div class="para-3">
+<p>Engineering Design Solutions
+
+Industrial Automation Solutions
+
+Design Facility Solutions
+
+ERP Tool
+
+Application Services & Modernization
+
+Permanent Hiring
+
+Contract To Contract
+
+Contract to Hire
+
+</p></div></pre>
+<pre><div class="info"><p>
+Mobile: +91 9640 173 246
+
+Email: info@envisionis-group.com
+</p></div></pre>
+<div class="hpost5">
+<h1>Locations:-</h1></div>
+<div class="Hpos">
+<h1>Envision Group - Telangana, Hyderabad</h1></div>
+<div class="Mpos">
+<h1>Envision Group - Pune, Maharashtra</h1></div>
+<div class="Kpos">
+<h1>Envision Group - Bangalore, Karnataka</h1></div>
 
 
+<div class="HA"><p>#913, Manjeera Trinity Corporate,<br> 
+9th floor, Office No.913,<br> 
+KPHB, India - 500085</p></div>
+<div class="MA">
+<p>Suratwala Mark, Wakad Road,<br>
+8th floor, Office No.810,<br> 
+Opposite to KFC, India - 411057</p></div>
+<div class="KA">
+<p>1596, 20th Main Rd, Agara Village,<br> 
+1st Sector,HSR Layout,<br> 
+India - 560085</p></div>
+<div class="Tpos">
+<h1>Envision Group - Tamil Nadu, Chennai</h1></div>
+<div class="Gpos">
+<h1>Envision GmbH - Germany, Europe</h1></div>
+<div class="Rpos">
+<h1>Envision SRL - Romania, Europe</h1></div>
+<div class="TA">
+<p>13, Customs colony,<br>
+OMR, Oggiyamduraipakkam,<br>
+India - 600097</p></div>
+<div class="GA">
+<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
+xth floor, Office No.xxx,<br>
+xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+</p></div>
+<div class="RA">
+<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
+xth floor, Office No.xxx,<br> 
+xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+</p></div>
 
 
-
+</div>
 
 
 
@@ -200,31 +291,45 @@
 
 
 <div class="footer">
-  <div class="fc">
-      <h1>&copy;</h1>
-    </div>
-  <p class="fp">2024 Envision Group. All Rights Reserved
+<div class="fc">
+    <h1>&copy;</h1>
+  </div>
+<p class="fp">2024 Envision Group. All Rights Reserved
 </p>  
 <div class="eimg">
-  <img src="EIS-logo.png" width="100%" height="85%">
+<img src="EIS-logo.png" width="100%" height="85%">
 </div>
 <div class="lin">
-  <img src="linkdin.png">
- 
+<a href="https://in.linkedin.com/" target="_blank"><img src="linkdin.png"></a>
+
 </div>
 <div class="face">
-  <img src="facebook.png">
+<a href="https://www.facebook.com/" target="_blank"> <img src="facebook.png"></a>
 </div>
 <div class="inst">
-  <img src="instagram.png" width="6.8%">
+<a href="https://www.instagram.com/accounts/login/" target="_blank"><img src="instagram.png" width="6.8%"></a>
 </div>
 <div class="gm">
-  <img src="googles.png" width="70%">
+<a href="https://google.com/" target="_blank"><img src="googles.png" width="70%"></a>
 </div>
 <div class="uu">
-  <img src="youtube.png" width="78%" height="70%">
+<a href="https://youtube.com/@EnvisionISGroup?si=0QoWVzg9Ng8Tlysz" target="_blank"><img src="youtube.png" width="78%" height="70%"></a>
 </div>
 </div>
+
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
