--- a/IndustrialAutomationSolutions.html
+++ b/IndustrialAutomationSolutions.html
@@ -52,7 +52,7 @@
   
         <ul>
           <div class="what">
-            <li><a style="color:blue;" href="#"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
+            <li><a href="#"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
             <li><a  href="WhoWeAre.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Who We Are</p><i class=""></i></a>
@@ -62,7 +62,7 @@
           </div>
         <br><br><br><br>
          <div class="ser">
-          <li><a  href="services1.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Services</p><i class=""></i></a>
+          <li><a style="color:blue;" href="services1.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Services</p><i class=""></i></a>
           </div>
           </li>
           <div class="Insights">
@@ -79,16 +79,16 @@
            <pre><div class="hpos1">
                 <h1>INDUSTRIAL AUTOMATION SOLUTIONS</h1>
              </div></pre>
-             <div class="image2" style="margin-left:-600px;margin-top:150px;z-index:0" >
-                <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture54.PNG" width="500px" height="280px"></div>
+             <div class="image2" style="margin-left:-600px;margin-top:150px;z-index:0;" >
+                <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture54.PNG" width="500px" height="280px" style="border-width:2px;border-style:solid;border-color:orange"></div>
                 <div class="image3" style="margin-left:-380px;margin-top:400px;z-index:0" >
-                    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture55.PNG" width="500px" height="280px"></div>
+                    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture55.PNG" width="500px" height="280px" style="border-width:2px;border-style:solid;border-color:yellow"></div>
                    <pre><div class="parapos1" style="margin-left:100px;margin-top:-10px;color:white;font-size:25px;line-height:40px;font-family:sans-serif">
-        <p>Envision specializes in BIW (Body-in-White) robotics simulation & our advanced simulation<br> solutions are designed to optimize and streamline the automation processes in the<br> automotive industry. Using advanced technologies and systems, mechanical engineers can<br> automate and optimize industrial processes, increase productivity, and improve<br> operational efficiency with industrial automation solutions. Industrial automation solutions<br> typically integrate hardware, software, and control systems to streamline operations and<br> reduce manual intervention. 
- Here are some of their key features:
+        <p>Envision specializes in BIW (Body-in-White) robotics simulation & our advanced simulation<br>solutions are designed to optimize and streamline the automation processes in the<br>automotive industry. Using advanced technologies and systems, mechanical engineers can<br>automate and optimize industrial processes, increase productivity, and improve<br>operational efficiency with industrial automation solutions. Industrial automation solutions<br>typically integrate hardware, software, and control systems to streamline operations and<br>reduce manual intervention. 
+Here are some of their key features:
             </p></div></pre>
-           <pre><div class="parapos2" style="margin-left:-1000px;margin-top:350px;color:white;font-size:25px;line-height:40px;font-family:sans-serif">
-            <p>In industrial automation, robots are often used to perform repetitive or complex tasks with<br> accuracy and efficiency. Advanced software tools are used to simulate & optimize the<br> robotic processes involved in BIW assembly, such as welding, handling & material<br> placement. Using state-of-the-art robotic simulation software, we virtually program and<br> validate robot trajectories and sequences. This allows us to verify the feasibility and<br> accuracy of the robot's movements, ensuring collision-free operations, optimizing cycle<br> times, and improving overall productivity. Virtual programming minimizes the need for<br> physical prototypes and enables quick iterations and adjustments.</p>
+           <pre><div class="parapos2" style="margin-left:-1008px;margin-top:350px;color:white;font-size:25px;line-height:40px;font-family:sans-serif">
+            <p>In industrial automation, robots are often used to perform repetitive or complex tasks with<br>accuracy and efficiency. Advanced software tools are used to simulate & optimize the<br>robotic processes involved in BIW assembly, such as welding, handling & material<br>placement. Using state-of-the-art robotic simulation software, we virtually program and<br>validate robot trajectories and sequences. This allows us to verify the feasibility and<br>accuracy of the robot's movements, ensuring collision-free operations, optimizing cycle<br>times, and improving overall productivity. Virtual programming minimizes the need for<br>physical prototypes and enables quick iterations and adjustments.</p>
 </div></pre>
                 </div>
                 <div class="container2">
@@ -138,7 +138,7 @@
                 </div>
                 <div class="container3">
                   <div class="pic71">
-                 <img src="Picture71.png" width="350px" height="300px">
+                 <img src="Picture71.png" width="350px" height="300px" >
                 </div>
                 <div class="para-1">
                 <p>They are used to automate the control of various devices and equipment on<br> the factory floor. A human-machine interface (HMI) is a way for operators to<br> interact with automation systems using a graphical user interface (GUI).<br> Operators can monitor and control industrial processes, make adjustments,<br> and respond to alarms and anomalies with HMIs, which display real-time data,<br>control parameters, and provide visual feedback on equipment and processes.<br> The objective of industrial automation is to optimize and control industrial<br> processes so that desired outcomes can be achieved. Variables such as speed,<br> temperature, pressure, and quality are regulated using algorithms and control<br> strategies. By optimizing and controlling processes, resources are efficiently<br> utilized, product quality is improved, waste is reduced, and productivity is<br> increased.<br> 
@@ -146,7 +146,7 @@
                   Integrating automation systems with enterprise-level systems, such as<br> manufacturing execution systems (MES), enterprise resource planning systems<br> (ERPs), and data analytics platforms, is often an integral part of industrial<br> automation solutions. This integration enables data sharing,<br> process optimization, production planning, and improved coordination<br> between shop floor operations and business functions.<br>Featured maintenance and remote monitoring are included in industrial<br> automation solutions. In order to detect anomalies, predict equipment<br> failures, and schedule maintenance activities,<br>advanced technologies like machine learning algorithms and condition<br> monitoring systems can be integrated. By doing so, downtime is minimized,<br> maintenance efforts are optimized, and continuous operation is ensured.
                   </p></div>
                 <div class="pic72">
-                  <img src="Picture72.png" width="350px" height="300px">
+                  <img src="Picture72.png" width="350px" height="300px" >
                  </div>
                  <div class="pic73">
                   <img src="Picture73.png" width="350px" height="300px">
@@ -206,7 +206,7 @@ Mobile: +91 9640 173 246
 
 Email: info@envisionis-group.com
 </p></div></pre>
-<div class="hpost5">
+<div class="hpost-5">
 <h1>Locations:-</h1></div>
 <div class="Hpos">
 <h1>Envision Group - Telangana, Hyderabad</h1></div>
